--- a/css/common.css
+++ b/css/common.css
@@ -41,10 +41,10 @@
   display: inline-block;
   padding: 1px 7px;
   margin: 5px 35px;
-  background-color: #393939; /* Color de fondo del enlace */
-  color: #fff; /* Color del texto del enlace */
-  text-decoration: none; /* Quita el subrayado del enlace */
-  border-radius: 20px; /* Añade bordes redondeados */
+  background-color: #393939;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 20px;
   border: 1.4px solid white;
 }
 
@@ -53,18 +53,134 @@
 }
 
 .contenedor {
-  display: flex; /* Utiliza flexbox para crear una disposición de dos columnas */
-  align-items: center; /* Centra verticalmente el contenido */
+  display: flex;
+  align-items: center;
 }
 
 .columna-izquierda {
-  flex: 1; /* Toma el 50% del espacio disponible */
-  padding: 20px; /* Espaciado interior para separar el contenido del borde */
+  flex: 1;
+  padding: 20px;
 }
 
 .columna-derecha {
-  flex: 1; /* Toma el 50% del espacio disponible */
-  text-align: center; /* Centra horizontalmente el contenido */
+  flex: 1;
+  text-align: center;
   height: auto;
   width: 100px;
+}
+
+.back-secundario {
+  background-color: rgb(239, 255, 250);
+  box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.2);
+}
+
+#titulo-sec {
+  font-size: 20px;
+  margin: 0px 40px;
+}
+
+#parrafo-sec {
+  font-size: 10px;
+  margin: 0px 40px 0px;
+}
+
+.botonera {
+  display: grid;
+  grid-template-columns: 50% 1fr;
+  gap: 10px;
+  align-items: center;
+  padding: 20px;
+}
+
+.boton-paso::before,
+.boton-general::before {
+  font-family: "Font Awesome";
+  font-weight: 900;
+  font-size: 20px;
+  margin-right: 100px;
+  color: white;
+  margin: 100px;
+}
+
+.boton-paso {
+  display: flex;
+  align-items: center;
+  background-color: rgb(255, 0, 102);
+  color: white;
+  cursor: pointer;
+  height: 60px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 30px;
+}
+
+.boton-general {
+  background-color: rgb(0, 115, 255);
+  display: flex;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+  height: 60px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 30px;
+}
+
+.boton-paso input[type="button"],
+.boton-general input[type="button"] {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  margin: 0;
+  text-align: left;
+  font-size: 25px;
+  font-weight: bold;
+  color: white;
+}
+
+footer {
+  background-color: #101010;
+  color: #fff;
+  padding: 20px;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-img {
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer-img img {
+  width: 33.33%;
+  height: 35px;
+}
+
+.footer-parrafo p {
+  font-size: small;
+  height: 60px;
+  margin: 0 auto;
+  color: #393939;
+}
+
+#link-footer {
+  font-size: small;
+  height: 60px;
+  margin: 0 auto;
+  color: cadetblue;
+}
+
+#link-footer:hover {
+  color: #fff;
+}
+
+#link-footer:active {
+  color: blue;
 }
