--- a/css/pages/generales.css
+++ b/css/pages/generales.css
@@ -1,4 +1,53 @@
-.back-container {
-    text-align: right;
-    background-color: #292929;
-  }
+.container-select {
+    display: flex;
+    align-items: center;
+}
+
+.informe {
+    margin: 1px;
+    width: 9%;
+    padding: 0px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    color: white;
+    border: 1px solid white;
+    align-items: center;
+    margin-left: 700px;
+
+}
+
+.busqueda {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.active {
+    padding: 15px;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+    margin: 1px;
+    width: 7.5%;
+    padding: 15px;
+    background-color: grey;
+    border-radius: 15px;
+    border: 1px solid black;
+}
+
+select {
+    background-color: rgba(0, 0, 0, 0.726);
+    text-align: center;
+    border-radius: 30px;
+    padding: 5px;
+    margin: 5px;
+    color: white;
+}
+
+i {
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+}
