--- a/css/common.css
+++ b/css/common.css
@@ -7,8 +7,64 @@
   list-style: none;
   box-sizing: border-box;
   font-size: large;
-  font-family: sans-serif;
+  font-family: Roboto;
 }
+
+:root {
+  --magenta: #ee3d8f;
+  --celeste: #37bbed;
+  --morado: #9283be;
+  --gris-claro: #9e9e9e;
+  --titulos: #333;
+  --textos: #333;
+  --fondo-pantalla: rgb(235, 245, 251);
+  --fondo-Cabecera: #18a0fb;
+  --fondo-Footer: #333;
+  --fondo-Menu: #333;
+  --texto-footer: #9e9e9e;
+  --titulo-Grilla: #727272;
+  --borde-inferior-Grilla: #727272;
+  --borde-Grilla: #c5c5c5;
+  --grafica-amarillo: rgb(252, 210, 0);
+  --grafica-amarillo-claro: rgba(252, 210, 0, 0.3);
+  --grafica-celeste: rgb(0, 169, 232);
+  --grafica-celeste-claro: rgba(0, 169, 232, 0.3);
+  --grafica-bordo: rgb(171, 40, 40);
+  --grafica-bordo-claro: rgba(171, 40, 40, 0.3);
+  --grafica-lila: rgb(112, 76, 159);
+  --grafica-lila-claro: rgba(112, 76, 159, 0.5);
+  --grafica-lila2: rgb(77, 46, 110);
+  --grafica-lila2-claro: rgba(77, 46, 110, 0.5);
+  --grafica-gris: rgb(128, 128, 128);
+  --grafica-gris-claro: rgb(128, 128, 128, 0.5);
+  --grafica-verde: rgb(102, 171, 60);
+  --grafica-verde-claro: rgba(102, 171, 60, 0.5);
+  --mensaje-usuario-amarillo: #ffc107;
+  --mensaje-usuario-verde: #28a745;
+  --mensaje-usuario-rojo: #dc3545;
+}
+
+p{
+  font-size: 12px;
+  color: var(--textos);
+}
+
+h1{
+  font-size: 26px;
+  color: var(--titulos);
+  padding-bottom: 20px;
+}
+
+h2{
+  font-size: 22px;
+  color: var(--titulos);
+}
+
+h3{
+  font-size: 18px;
+  color: var(--titulos);
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -16,23 +72,35 @@ body {
 main {
   flex: 1;
 }
-.header-page {
-  background-color: rgb(35, 156, 255);
+
+.barra-de-logo {
+  padding: 0.5em;
+  background-color: var(--fondo-Cabecera);
+  color: white;
+  width: 100%;
+  margin-top: 0px;
+  margin: auto;
 }
 .logo {
-  max-width: 200px;
-  padding: 5px 25px;
+  width: 185px;
+  padding-left: 40px;
 }
 
-.back-container {
-  text-align: right;
-  background-color: #292929;
+.barra-de-menu {
+  margin: 0px ;
+  padding-top: 10px;
+  background-color: var(--fondo-Menu);
+  width: 100%;
+  
 }
 footer {
-  background-color: #101010;
-  color: #fff;
+  background-color: var(--fondo-Footer);
+  color: var(--texto-footer);
   padding: 20px;
   text-align: center;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 .footer-container {
@@ -45,18 +113,16 @@ footer {
 .footer-img {
   display: flex;
   justify-content: space-around;
-}
-
-.footer-img img {
-  width: 33.33%;
-  height: 35px;
+  height: 40px;
+  width: auto;
 }
 
 .footer-parrafo p {
   font-size: small;
   height: 60px;
   margin: 0 auto;
-  color: #393939;
+  color: var(--texto-footer);
+  justify-content: center;
 }
 
 #link-footer {
@@ -74,8 +140,4 @@ footer {
   color: blue;
 }
 
-@media screen and (min-height: 648px) {
-  footer {
-    margin-top: 300px;
-  }
-}
+
