--- a/css/pages/generales.css
+++ b/css/pages/generales.css
@@ -1,53 +1,54 @@
-.container-select {
-    display: flex;
-    align-items: center;
-}
-
-.informe {
-    margin: 1px;
-    width: 9%;
-    padding: 0px;
-    background-color: rgb(0, 0, 0);
-    border-radius: 20px;
-    color: white;
-    border: 1px solid white;
-    align-items: center;
-    margin-left: 700px;
+.mensajes p{
+    
 
 }
 
-.busqueda {
-    flex: 1;
-    margin-right: 10px;
-}
-
-.active {
-    padding: 15px;
+.verde p{
+    
     border-radius: 10px;
-    color: rgb(0, 0, 0);
-    margin: 1px;
-    width: 7.5%;
+    width: 400px;
+    margin: 20px auto;
     padding: 15px;
-    background-color: grey;
-    border-radius: 15px;
-    border: 1px solid black;
-}
-
-select {
-    background-color: rgba(0, 0, 0, 0.726);
+    color:  #FFffFF;
+    font-size: 12px;
+    font-weight: 200;
     text-align: center;
-    border-radius: 30px;
-    padding: 5px;
-    margin: 5px;
-    color: white;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--mensaje-usuario-verde);
+
 }
 
-i {
-    color: rgb(255, 255, 255);
-    display: flex;
+.rojo p{
+    background-color: var(--mensaje-usuario-rojo);
+    
+    border-radius: 10px;
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    color:  #FFffFF;
+    font-size: 12px;
+    font-weight: 200;
+    text-align: center;
     align-items: center;
-    margin-left: 15px;
-    position: relative;
-    outline: none;
-    cursor: pointer;
+    justify-content: center;
+
 }
+
+.amarillo p{
+    background-color: var(--mensaje-usuario-amarillo);
+    
+    border-radius: 10px;
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    color:  #FFffFF;
+    font-size: 12px;
+    font-weight: 200;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
