--- a/css/pages/generales.css
+++ b/css/pages/generales.css
@@ -1,289 +1,377 @@
 select {
-    background-color: transparent;
-    border: 0;
-    font-size: 14px;
-    height: 30px;
-    padding: 5px;
-    color: var(--celeste);
-    font-weight: bold;
+  background-color: transparent;
+  border: 0;
+  font-size: 14px;
+  height: 30px;
+  padding: 5px;
+  color: var(--celeste);
+  font-weight: bold;
 }
 
 .barra-de-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px;
 }
 
 .filtrar {
-    background-color: white;
-    border-radius: 15px;
-    font-family: #fff;
-    font-size: 15px;
-    width: 100px;
-    padding-left: 15px;
-    padding-inline-start: 20px;
+  background-color: white;
+  border-radius: 15px;
+  font-family: #fff;
+  font-size: 15px;
+  width: 100px;
+  padding-left: 15px;
+  padding-inline-start: 20px;
 }
 
-.barra-de-menu i{
-    color: rgb(0, 0, 0);
-   
-    align-items: center;
-    margin-left: -15px;
-    outline: none;
-    cursor: pointer;
-    font-size: 15px;
-    transform: translateX(160%);
+.barra-de-menu i {
+  color: rgb(0, 0, 0);
+
+  align-items: center;
+  margin-left: -15px;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+  transform: translateX(160%);
 }
 
 .boton-general {
-    background-color: var(--celeste);
-    border-radius: 5px;
-    padding: 5px 3em;
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #fff;
-    margin: 5px;
-    display: flex;
+  background-color: var(--celeste);
+  border-radius: 5px;
+  padding: 5px 3em;
+  font-size: 10px;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 5px;
+  display: flex;
 }
 
 .boton-general:hover {
-    background-color: var(--gris-claro);
+  background-color: var(--gris-claro);
 }
 
 .boton-informe {
-    border: 1px solid white;
-    border-radius: 15px;
-    font-size: 10px;
-    text-align: center;
-    color: white;
-    margin: 5px;
-    padding: 5px 3em;
+  border: 1px solid white;
+  border-radius: 15px;
+  font-size: 10px;
+  text-align: center;
+  color: white;
+  margin: 5px;
+  padding: 5px 3em;
 
-    display: flex;
+  display: flex;
 }
 
 .boton-informe:hover {
-    background-color: var(--gris-claro);
+  background-color: var(--gris-claro);
 }
 
 .inicio {
-    background-color: var(--gris-claro);
-    border-radius: 5px;
-    padding: 5px 3em;
-    color: #fff;
-    font-size: 5px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-left: auto;
-    width: 5%;
-    padding-bottom: 1px;
-    padding-top: 1px;
+  background-color: var(--gris-claro);
+  border-radius: 5px;
+  padding: 5px 3em;
+  color: #fff;
+  font-size: 5px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-left: auto;
+  width: 5%;
+  padding-bottom: 1px;
+  padding-top: 1px;
 }
 
 .inicio a {
-    color: white;
-    font-size: 15px;
+  color: white;
+  font-size: 15px;
 }
 
 .inicio:hover {
-    background-color: var(--textos);
+  background-color: var(--textos);
 }
 
 
-.verde p{
-    
-    border-radius: 10px;
-    width: 400px;
-    margin: 20px auto;
-    padding: 15px;
-    color:  #FFffFF;
-    font-size: 12px;
-    font-weight: 200;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+.verde p {
 
-    background-color: var(--mensaje-usuario-verde);
+  border-radius: 10px;
+  width: 400px;
+  margin: 20px auto;
+  padding: 15px;
+  color: #FFffFF;
+  font-size: 12px;
+  font-weight: 200;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 
-}
-
-.rojo p{
-    background-color: var(--mensaje-usuario-rojo);
-    
-    border-radius: 10px;
-    width: 400px;
-    margin: 20px auto;
-    padding: 15px;
-    color:  #FFffFF;
-    font-size: 12px;
-    font-weight: 200;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+  background-color: var(--mensaje-usuario-verde);
 
 }
 
-.amarillo p{
-    background-color: var(--mensaje-usuario-amarillo);
-    
-    border-radius: 10px;
-    width: 400px;
-    margin: 20px auto;
-    padding: 15px;
-    color:  #FFffFF;
-    font-size: 12px;
-    font-weight: 200;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+.rojo p {
+  background-color: var(--mensaje-usuario-rojo);
+
+  border-radius: 10px;
+  width: 400px;
+  margin: 20px auto;
+  padding: 15px;
+  color: #FFffFF;
+  font-size: 12px;
+  font-weight: 200;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.amarillo p {
+  background-color: var(--mensaje-usuario-amarillo);
+
+  border-radius: 10px;
+  width: 400px;
+  margin: 20px auto;
+  padding: 15px;
+  color: #FFffFF;
+  font-size: 12px;
+  font-weight: 200;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 
 }
 
 
 
-.texto-path{
-    font-size: 14px;
-    font-family: Roboto;
-    Color:var(--celeste);
-    padding-bottom: 45px;
+.texto-path {
+  font-size: 14px;
+  font-family: Roboto;
+  Color: var(--celeste);
+  padding-bottom: 45px;
 }
 
 
-.texto{
-    padding-left: 20px;
+.texto {
+  padding-left: 20px;
 }
 
 .contenedor-cajas {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-  }
+  display: flex;
+
+
+}
+
 
 
 
 .agregar-informe {
-    border: 0;
-   background-color: var(--gris-claro);
-   color: white;
-   font-size: 10px;
-   padding: 5px;
-   border-radius: 5px;
-   text-transform: uppercase;
-   height: 50px;
-   width: 200px;
-   margin-left: 15px;
+
+
+  border: 0;
+  background-color: var(--gris-claro);
+  color: white;
+  font-size: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  height: 35px;
+  width: 250px;
+  margin: auto;
+  min-width: 250px;
+
 }
 
-.agregar-informe:hover{
-    color: var(--textos);
+.agregar-informe:hover {
+  color: var(--textos);
+}
+
+.derecha {
+  display: flex;
+  margin-left: auto;
 }
 
 
-.mesas-estructuradas{
-    display: flex;
-    align-items: center; 
-    margin: 15px;
-    width: 280px;
-    height: 70px;
-    padding: 0.5rem 1rem;
-    font-family: #fff;
-    border-radius: 10px;
-    background-color: var(--celeste);
-    color: white;
-  }
-  
-  .icono-mesa {
-    flex: 0 0 30%; 
-    text-align: center;
-    transform: translateX(-5px);
-  }
-  
-  .icono-mesa i {
-    font-size: 30px; 
-  }
-  
-  .contenido-mesa h3{
-    color: white; 
-  }
-  
-  
-  .contenido-mesa p {
-    
-    line-height: 1.5; 
-    color: white;
-    font-size: 12px;
-  }
+.mesas-estructuradas {
+  display: flex;
+  align-items: center;
+  margin: 15px;
+  width: 280px;
+  height: 70px;
+  padding: 0.5rem 1rem;
+  font-family: #fff;
+  border-radius: 10px;
+  background-color: var(--celeste);
+  color: white;
+}
 
-  .electores{
-    display: flex;
-    align-items: center; 
-    margin: 15px;
-    width: 280px;
-    height: 70px;
-    padding: 0.5rem 1rem;
-    font-family: #fff;
-    border-radius: 10px;
-    background-color: var(--magenta);
-    color: white;
-  }
-  
-  .icono-electores {
-    flex: 0 0 30%; 
-    text-align: center;
-    transform: translateX(-5px);
-  }
-  
-  .icono-electores i {
-    font-size: 30px; 
-  }
-  
-  .contenido-electores h3{
-    color: white; 
-  }
-  
-  
-  .contenido-electores p {
-    
-    line-height: 1.5; 
-    color: white;
-    font-size: 12px;
-  }
+.icono-mesa {
+  flex: 0 0 30%;
+  text-align: center;
+  transform: translateX(-5px);
+}
 
-  .participacion-sobre-estructurado{
-    display: flex;
-    align-items: center; 
-    margin: 15px;
-    width: 280px;
-    height: 70px;
-    padding: 0.5rem 1rem;
-    font-family: #fff;
-    border-radius: 10px;
-    background-color: var(--morado);
-    color: white;
-  }
-  
-  .icono-participacion{
-    flex: 0 0 30%; 
-    text-align: center;
-    transform: translateX(-5px);
-  }
-  
-  .icono-participacion i {
-    font-size: 30px; 
-  }
-  
-  .contenido-participacion h3{
-    color: white; 
-    font-size: 12px;
-  }
-  
-  
-  .contenido-participacion p {
-    
-    line-height: 1.5; 
-    color: white;
-    font-size: 12px;
-  }
+.icono-mesa i {
+  font-size: 30px;
+}
+
+.contenido-mesa h3 {
+  color: white;
+}
 
 
+.contenido-mesa p {
+
+  line-height: 1.5;
+  color: white;
+  font-size: 12px;
+}
+
+.electores {
+  display: flex;
+  align-items: center;
+  margin: 15px;
+  width: 280px;
+  height: 70px;
+  padding: 0.5rem 1rem;
+  font-family: #fff;
+  border-radius: 10px;
+  background-color: var(--magenta);
+  color: white;
+}
+
+.icono-electores {
+  flex: 0 0 30%;
+  text-align: center;
+  transform: translateX(-5px);
+}
+
+.icono-electores i {
+  font-size: 30px;
+}
+
+.contenido-electores h3 {
+  color: white;
+}
+
+
+.contenido-electores p {
+
+  line-height: 1.5;
+  color: white;
+  font-size: 12px;
+}
+
+.participacion-sobre-estructurado {
+  display: flex;
+  align-items: center;
+  margin: 15px;
+  width: 280px;
+  height: 70px;
+  padding: 0.5rem 1rem;
+  font-family: #fff;
+  border-radius: 10px;
+  background-color: var(--morado);
+  color: white;
+}
+
+.icono-participacion {
+  flex: 0 0 30%;
+  text-align: center;
+  transform: translateX(-5px);
+}
+
+.icono-participacion i {
+  font-size: 30px;
+}
+
+.contenido-participacion h3 {
+  color: white;
+  font-size: 12px;
+}
+
+
+.contenido-participacion p {
+
+  line-height: 1.5;
+  color: white;
+  font-size: 12px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  margin: auto;
+}
+
+table{
+  border: solid 1px violet ;
+}
+.grid-1 {
+  
+  margin: 2px;
+  border-radius: 25px;
+  border: 1px solid var(--borde-Grilla);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2) ;
+  
+}
+
+.grid-2 {
+  margin: 2px;
+  border-radius: 25px;
+  border: 1px var(--borde-Grilla) solid;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2) ;
+
+}
+
+.grid-3 {
+  margin: 2px;
+  border-radius: 25px;
+  border: 1px var(--borde-Grilla) solid;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2) ;
+}
+
+.all-container {
+  margin: auto;
+  max-width: 1800px;
+  padding-bottom: 15px;
+}
+
+.grid-1 h2{
+  font-weight: bold;
+  padding: 1.8em 0 0 0;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.grid-2 h2{
+  font-weight: bold;
+  padding: 1.8em 0 0 0;
+  text-align: center;
+  white-space: nowrap;
+}
+
+
+.grid-3 h2{
+  font-weight: bold;
+  padding: 1.8em 0 0 0;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.grid-1 tbody{
+  overflow: scroll;
+  height: 325px;
+  
+  
+  
+}
+
+table{
+  margin: auto;
+ border: 0;
+  min-width: 600px;
+}
+
+.grid-1 h3{
+  text-align: left;
+  padding: 5px;
+}
