--- a/css/common.css
+++ b/css/common.css
@@ -43,7 +43,6 @@
   --mensaje-usuario-verde: #28a745;
   --mensaje-usuario-rojo: #dc3545;
 }
-
 p{
   font-size: 12px;
   color: var(--textos);
@@ -68,6 +67,7 @@ h3{
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 main {
   flex: 1;
@@ -79,7 +79,7 @@ main {
   color: white;
   width: 100%;
   margin-top: 0px;
-  margin: auto;
+  margin-top: auto;
 }
 .logo {
   width: 185px;
@@ -97,9 +97,10 @@ footer {
   background-color: var(--fondo-Footer);
   color: var(--texto-footer);
   padding: 20px;
+  padding-bottom: 40px;
   text-align: center;
   width: 100%;
-  position: fixed;
+  margin: auto;
   bottom: 0;
 }
 
