--- a/css/pages/generales.css
+++ b/css/pages/generales.css
@@ -11,8 +11,8 @@ select {
 
 .barra-de-menu {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   padding: 0px;
 }
 
@@ -20,40 +20,37 @@ select {
   margin-top: 15px;
 }
 
+.rojo {
+  color: red;
+}
+
 .filtrar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
+  align-items: center;
   background-color: white;
   border-radius: 15px;
   font-family: #fff;
   font-size: 15px;
-  max-width: 100px;
   border: none;
   cursor: pointer;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-.filtrar i {
-  margin-left: 0;
-}
-
-.barra-de-menu i {
-  margin: 0;
-  color: rgb(0, 0, 0);
-  outline: none;
-  font-size: 15px;
-}
-
-.barra-de-menu i {
-  color: rgb(0, 0, 0);
-
+  margin: auto auto;
   align-items: center;
-  margin-left: -15px;
-  outline: none;
-  cursor: pointer;
-  font-size: 15px;
-  transform: translateX(160%);
+  padding: 0px 10px;
 }
 
+.container-button {
+  display: inline-block;
+  max-height: fit-content;
+  align-content: center;
+  margin: 4px 0px 0px 0px;
+}
+
+.filtrar-der {
+  margin-left: 5px;
+}
 .boton-paso {
   background-color: var(--magenta);
   border-radius: 5px;
